objects/Login_History_2__c.object
<CustomObject>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Login_Date__c</fullName>
        <label>Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Login_History_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Login History Custom</label>
    <nameField>
        <displayFormat>LH-{00000000}</displayFormat>
        <label>Login History 2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login History Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>